--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -36,57 +36,15 @@
   span{
     color: red;
   }
-  h2, h3{
-    color: white;
+  h3{
+    color: red;
   }
-  .abt{
+  /* .abt{
     display:flex;
     justify-content:center;
     font-size:70px;
-  }
-  
-  /* header nav ul {
-    display: flex;
-    justify-content: flex-start;
-    gap: 0.5em;
-    align-items: flex-start;
-    margin: 0;
-    padding: 0;
-    margin-top: 1em;
-  }
-  
-  header nav ul li {
-    list-style: none;
-  }
-  
-  header nav ul li a {
-    padding: 0.5em;
-    border-radius: 0.5em;
-    border: 1px solid;
-    text-decoration: none;
-    color: white; 
-    transition: all 0.3s;
-  }
-  
-  header nav ul li a:link {
-    color: white;
-  }
-  
-  header nav ul li a:visited {
-    color: purple;
-  }
-  
-  header nav ul li a:focus {
-    color: red;
-  }
-  
-  header nav ul li a:hover {
-    color: orange;
-  }
-  
-  header nav ul li a:active {
-    color: aqua;
   } */
+  
   
   main {
     display: flex;
@@ -123,13 +81,13 @@
   aside nav ul li a:hover {
     color: firebrick;
   }
-  .footer{
-    position:absolute;
-    bottom:0;
-    text-align:center;
-    justify-content: center;
-  
+ 
+  .footer {
+    position: absolute;
+    bottom: 0;
+    text-align: center;
   }
+  .footer 
   footer {
     position: relative;
     bottom: 0;
@@ -195,7 +153,7 @@
     background-color: darkblue;
     color: #fff;
     border:#fff;
-    border-radius: 10px;
+    border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
@@ -211,8 +169,8 @@
   .next-btn {
     padding: 10px 20px;
     font-size: 16px;
-    background-color: white;
-    color: darkblue;
+    background-color: darkblue;
+    color: white;
     border: none;
     border-radius: 8px;
     cursor: pointer;
@@ -271,7 +229,7 @@
   #music{
     margin-top:5px;
   }
-  frame{
+  iframe{
     background:white;
   }
   .profile {
@@ -279,4 +237,8 @@
     height: 200px;
     border-radius: 50%;
     object-fit: cover;
+  }
+  .abt{
+    float:none;
+    clear:both;
   }
