--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,7 +3,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
   }
   
   body {
@@ -11,6 +10,7 @@
     background-size: cover;
     background-position:center;
     color: white;
+    font-family: 'Poppins', sans-serif;
   }
   h1{
     color:white;
@@ -23,40 +23,205 @@
   }
   
   header {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr auto;
     align-items: center;
     padding: 1em 5%;
     margin-bottom: 1em;
   }
-  img{
-    width:100%;
-    height:auto;
-  }
-  span{
-    color: red;
-  }
-  h3{
-    color: red;
-  }
-  /* .abt{
+  header nav ul {
+    list-style: none;
     display:flex;
-    justify-content:center;
-    font-size:70px;
-  } */
-  
-  
+  }
+  header nav ul li {
+    margin-left: 10px;
+    
+  } 
+  header nav ul li a{
+    padding:0.2em 0.5em;
+    margin: 0.1em;
+    border-radius:0.5em;
+    display:block;
+    border: 2px solid; 
+    text-decoration: none;
+    color:purple;
+  }
+  header nav ul li a:link{
+    color:darkblue;
+  }
+  header nav ul li a:visited{
+    color: darkslateblue;
+  }
+  header nav ul li a:focus{
+    color:red; 
+  }
+  header nav ul li a:hover{
+    color:lightseagreen;
+  }
+  header nav ul li a:active{
+    color:darkblue;
+  }
+  .header__menu-icon{
+      display: none;
+  }
+  header nav ul li:first-child {
+    margin-left: 0;
+  }
   main {
     display: flex;
     justify-content: space-between;
     padding: 0 5%;
   }
-  
-  aside {
-    width: 15%;
-    padding: 2%;
+  main {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    padding: 0 5%;
+    clear: left;
+  }
+  span{
+    color: red;
+  }
+  h1 {
+    color: white;
+    font-size: 75px;
+    margin: 20px 0 20px;
+  }
+  h3 {
+    color: red;
+  }
+  video {
+    width: 65%;
+    height: auto;
+    border-radius: 10%;
+  }
+  .table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  th,
+  td {
+    padding: 10px;
+    border: 1px solid #ddd;
+  }
+  
+  thead {
+    background-color: black;
+    color: white;
+  }
+  
+  tbody tr:nth-child(even) {
+    background-color: black;
+    color: white;
+  }
+  
+  figure {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+  }
+  
+  figure img {
+    display: block;
+    max-width: 60%;
+    height: 350px;
+    margin: 0 auto;
+    border-radius: 10px;
+    width: 24%;
+    margin:1%;
+  }
+  
+  blockquote {
+    font-size: 18px;
+    font-style: italic;
+    padding: 10px;
+    margin-top: 5px;
+  }
+  
+  .form {
+    max-width: 300px;
+    margin: 0 auto;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  textarea {
+    width: 30%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    margin-bottom: 10px;
+  }
+  
+  button.submit {
+    display: block;
+    width: 25%;
+    padding: 7px;
+    background-color: darkblue;
+    color: #fff;
+    border: #fff;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-bottom: 10px;
+  }
+  
+  button.submit:hover {
+    background-color: lightseagreen;
+  }
+  .profile {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  /* Navigation buttons */
+  .container {
+    text-align: right;
+    margin-right: 30%;
+  }
+  .container__button:hover{
+    color:red;
+  }
+  .container__button--previous{
+    margin-right: 7px;
+  }
+  .container__button--next{
+    margin-left: 7px;
+  }
+  
+  .container__button--previous,
+  .container__button--next {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: darkblue;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    display: inline-block;
+    margin: 20px 10px;
+  }
+  .container__button--previous:hover,
+  .container__button--next:hover {
+    color: red;
+  }
+  /* Aside */
+  aside {
+    width: 10%;
+    height: 30vh;
+    padding: 2%;
+    position: relative;
+    top: 0;
+    left:0;
+    background-color: #111852;
+    overflow-y: auto;
   }
   
   aside nav ul {
@@ -65,34 +230,32 @@
     margin: 0;
     display: flex;
     flex-direction: column;
-    color:rgb(225, 173, 42);
   }
   
   aside nav ul li {
     margin-bottom: 5%;
-    
   }
   
   aside nav ul li a {
     text-decoration: none;
     display: block;
+    color:white;
   }
   
   aside nav ul li a:hover {
-    color: firebrick;
+    color: red;
   }
- 
+  /* footer */
   .footer {
     position: absolute;
     bottom: 0;
     text-align: center;
+    width: 100%;
   }
-  .footer 
+  
   footer {
     position: relative;
-    width:100%;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.8); 
+    background-color: rgba(0, 0, 0, 0.8);
     text-align: center;
     padding: 1em;
     border-top: 2px solid transparent;
@@ -112,137 +275,51 @@
   
   footer nav ul li a {
     text-decoration: none;
-    color: white; 
+    color: white;
     border-bottom: 2px solid transparent;
-    transition: border-color 0.3s;
+    transition: color 0.3s, border-bottom 0.3s, transform 0.3s;
     text-transform: uppercase;
   }
   
   footer nav ul li a:hover {
-    border-bottom-color: firebrick;
+    color: lightseagreen; 
+    border-bottom-color:lightseagreen;
+    transform: translateY(-3px);
+    transition: color 0.3s, border-bottom 0.3s, transform 0.3s; 
   }
-  
-  .container {
-    text-align: right;
-  }
-  
-  
-  .form {
-    max-width: 300px; 
-    margin: 0 auto;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  
-  input[type="text"],
-  input[type="email"],
-  textarea {
-    width: 50%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    margin-bottom: 10px;
-  }
-  
-  button.submit {
-    display: block;
-    width: 50%;
-    padding: 7px;
-    background-color: darkblue;
-    color: #fff;
-    border:#fff;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  button.submit:hover {
-    background-color: #45a049;
-  }
-  .container {
-    text-align: center;
-  }
-  
-  .previous-btn,
-  .next-btn {
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: darkblue;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    position:relative;
-    top:0.05em;
-    margin-left: 20px;
-    margin-top:20px;
-    margin-bottom: 7px;
-  }
-  
-  .previous-button:hover,
-  .next-button:hover {
-    background-color: darkblue;
-  }
-  .table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  th,
-  td {
-    padding: 10px;
-    border: 1px solid #ddd;
-  }
-  
-  thead {
-    background-color: black;
-  }
-  
-  tbody tr:nth-child(even) {
-    background-color: black;
-  }
-  .bar{
+  /* Responsive Design */
+  @media only screen and (max-width: 767px) {
+  .header__menu-icon {
+      display: block;
+        
+    }
+  .header__bar{
     width: 35px;
     height: 5px;
     background-color: white;
     margin: 6px 0;
   }
-  figure {
-    width: 100%;
+  header nav ul {
+      display: none;
+    }
+  figure img{
     max-width: 100%;
-    margin: 0;
-    padding: 0;
-  }
+    margin-bottom: 10px;
+    width:100%
+    }
+  aside{
+    display:none;
+    }    
+  footer nav ul {
+     display: block;
+    }
   
-  img {
-    display: block;
-    max-width: 80%;
-    height: auto;
-    margin: 0 auto;
-  }
-  blockquote {
-    font-size: 18px;
-    font-style: italic;
+    }
     
-    
-    padding: 10px;
-    margin-top: 5px;
-  }
-  #music{
-    margin-top:8px;
-  }
-
-  .profile {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    object-fit: cover;
-  }
-  .abt{
-    float:none;
-    clear:both;
+  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  
+    figure img {
+      width: 48%; 
+      margin: 1%;
+    }
   }
